// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Tests Padding can be added to Text 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-padding",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "This text is indented by 10px padding on all sides.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-padding",
    },
  },
  "Visual Tree": {
    "Comment": "text-padding",
    "Offset": "0, 0, 0",
    "Size": "834, 39",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can adjust its fontsize according to its limitations, case 0 a 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-adjustfontsizetofit-0-a",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. With AdjustFontSize height:80,width:500,lineCount:3,fontSize:40",
    "TextRangePattern.GetText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. With AdjustFontSize height:80,width:500,lineCount:3,fontSize:40",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-adjustfontsizetofit-0-a",
    },
  },
  "Visual Tree": {
    "Comment": "text-adjustfontsizetofit-0-a",
    "Offset": "0, 0, 0",
    "Size": "500, 80",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can adjust its fontsize according to its limitations, case 0 b 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-adjustfontsizetofit-0-b",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Without AdjustFontSize height:80,width:500,lineCount:3,fontSize:40",
    "TextRangePattern.GetText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Without AdjustFontSize height:80,width:500,lineCount:3,fontSize:40",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-adjustfontsizetofit-0-b",
    },
  },
  "Visual Tree": {
    "Comment": "text-adjustfontsizetofit-0-b",
    "Offset": "0, 0, 0",
    "Size": "500, 80",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can adjust its fontsize according to its limitations, case 1 a 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-adjustfontsizetofit-1-a",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. With AdjustFontSize height:120,width:475,lineCount:5,fontSize:40",
    "TextRangePattern.GetText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. With AdjustFontSize height:120,width:475,lineCount:5,fontSize:40",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-adjustfontsizetofit-1-a",
    },
  },
  "Visual Tree": {
    "Comment": "text-adjustfontsizetofit-1-a",
    "Offset": "0, 0, 0",
    "Size": "475, 120",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can adjust its fontsize according to its limitations, case 1 b 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-adjustfontsizetofit-1-b",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Without AdjustFontSize height:120,width:475,lineCount:5,fontSize:40",
    "TextRangePattern.GetText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Without AdjustFontSize height:120,width:475,lineCount:5,fontSize:40",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-adjustfontsizetofit-1-b",
    },
  },
  "Visual Tree": {
    "Comment": "text-adjustfontsizetofit-1-b",
    "Offset": "0, 0, 0",
    "Size": "475, 120",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can adjust its fontsize according to its limitations, case 2 a 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-adjustfontsizetofit-2-a",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. With AdjustFontSize height:160,width:450,lineCount:0,fontSize:40",
    "TextRangePattern.GetText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. With AdjustFontSize height:160,width:450,lineCount:0,fontSize:40",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-adjustfontsizetofit-2-a",
    },
  },
  "Visual Tree": {
    "Comment": "text-adjustfontsizetofit-2-a",
    "Offset": "0, 0, 0",
    "Size": "450, 160",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can adjust its fontsize according to its limitations, case 2 b 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-adjustfontsizetofit-2-b",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Without AdjustFontSize height:160,width:450,lineCount:0,fontSize:40",
    "TextRangePattern.GetText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Without AdjustFontSize height:160,width:450,lineCount:0,fontSize:40",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-adjustfontsizetofit-2-b",
    },
  },
  "Visual Tree": {
    "Comment": "text-adjustfontsizetofit-2-b",
    "Offset": "0, 0, 0",
    "Size": "450, 160",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can adjust its fontsize according to its limitations, default a 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-adjustfontsizetofit-default-a",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore Ut enim ad minim veniam.With AdjustFontSize width: 800, height: 100, fontSize: 20",
    "TextRangePattern.GetText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore Ut enim ad minim veniam.With AdjustFontSize width: 800, height: 100, fontSize: 20",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-adjustfontsizetofit-default-a",
    },
  },
  "Visual Tree": {
    "Comment": "text-adjustfontsizetofit-default-a",
    "Offset": "0, 0, 0",
    "Size": "500, 100",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can adjust its fontsize according to its limitations, default b 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-adjustfontsizetofit-default-b",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore Ut enim ad minim veniam.With AdjustFontSize width: 800, height: 100, fontSize: 20",
    "TextRangePattern.GetText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore Ut enim ad minim veniam.With AdjustFontSize width: 800, height: 100, fontSize: 20",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-adjustfontsizetofit-default-b",
    },
  },
  "Visual Tree": {
    "Comment": "text-adjustfontsizetofit-default-b",
    "Offset": "0, 0, 0",
    "Size": "500, 100",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can be restricted to one line 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-one-line",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Maximum of one line no matter now much I write here. If I keep writing it'll just truncate after one line. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dapibus felis eget augue condimentum suscipit. Suspendisse hendrerit, libero aliquet malesuada tempor, urna nibh consectetur tellus, vitae efficitur quam erat non mi. Maecenas vitae eros sit amet quam vestibulum porta sed sit amet tellus. Fusce quis lectus congue, fringilla arcu id, luctus urna. Cras sagittis ornare mauris sit amet dictum. Vestibulum feugiat laoreet fringilla. Vivamus ac diam vehicula felis venenatis sagittis vitae ultrices elit. Curabitur libero augue, laoreet quis orci vitae, congue euismod massa. Aenean nec odio sed urna vehicula fermentum non a magna. Quisque ut commodo neque, eget eleifend odio. Sed sit amet lacinia sem. Suspendisse in metus in purus scelerisque vestibulum. Nam metus dui, efficitur nec metus non, tincidunt pharetra sapien. Praesent id convallis metus, ut malesuada arcu. Quisque quam libero, pharetra eu tellus ac, aliquam fringilla erat. Quisque tempus in lorem ac suscipit.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-one-line",
    },
  },
  "Visual Tree": {
    "Comment": "text-one-line",
    "Offset": "0, 0, 0",
    "Size": "834, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can be selectable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-selectable",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "This text is selectable if you click-and-hold, and will offer the native Android selection menus.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-selectable",
    },
  },
  "Visual Tree": {
    "Comment": "text-selectable",
    "Offset": "0, 0, 0",
    "Size": "834, 20",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can have a color 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-color",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Red color",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-color",
    },
  },
  "Visual Tree": {
    "Comment": "text-color",
    "Offset": "0, 0, 0",
    "Size": "834, 20",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can have a customized selection color 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-selection-color",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "This text will have a orange highlight on selection.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-selection-color",
    },
  },
  "Visual Tree": {
    "Comment": "text-selection-color",
    "Offset": "0, 0, 0",
    "Size": "834, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can have a size 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-size",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Size 23",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-size",
    },
  },
  "Visual Tree": {
    "Comment": "text-size",
    "Offset": "0, 0, 0",
    "Size": "834, 32",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can have an outer color 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-outer-color",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "(Normal text,(R)red(G)green(B)blue(C)cyan(M)magenta(Y)yellow(K)black(and bold(and tiny bold italic blue(and tiny normal blue))))",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-outer-color",
    },
  },
  "Visual Tree": {
    "Comment": "text-outer-color",
    "Offset": "0, 0, 0",
    "Size": "834, 20",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can have decoration lines: Solid Line Through 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-decoration-solid-linethru",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Solid line-through",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-decoration-solid-linethru",
    },
  },
  "Visual Tree": {
    "Comment": "text-decoration-solid-linethru",
    "Offset": "0, 0, 0",
    "Size": "834, 20",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can have decoration lines: Underline 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-decoration-underline",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Solid underline",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-decoration-underline",
    },
  },
  "Visual Tree": {
    "Comment": "text-decoration-underline",
    "Offset": "0, 0, 0",
    "Size": "834, 20",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can have shadows 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-shadow",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Demo text shadow",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-shadow",
    },
  },
  "Visual Tree": {
    "Comment": "text-shadow",
    "Offset": "0, 0, 0",
    "Size": "834, 27",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Text Tests Text can wrap 1`] = `
{
  "Automation Tree": {
    "AutomationId": "text-wrap",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "The text should wrap if it goes on multiple lines. See, this is going to the next line. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dapibus felis eget augue condimentum suscipit. Suspendisse hendrerit, libero aliquet malesuada tempor, urna nibh consectetur tellus, vitae efficitur quam erat non mi. Maecenas vitae eros sit amet quam vestibulum porta sed sit amet tellus. Fusce quis lectus congue, fringilla arcu id, luctus urna. Cras sagittis ornare mauris sit amet dictum. Vestibulum feugiat laoreet fringilla. Vivamus ac diam vehicula felis venenatis sagittis vitae ultrices elit. Curabitur libero augue, laoreet quis orci vitae, congue euismod massa. Aenean nec odio sed urna vehicula fermentum non a magna. Quisque ut commodo neque, eget eleifend odio. Sed sit amet lacinia sem. Suspendisse in metus in purus scelerisque vestibulum. Nam metus dui, efficitur nec metus non, tincidunt pharetra sapien. Praesent id convallis metus, ut malesuada arcu. Quisque quam libero, pharetra eu tellus ac, aliquam fringilla erat. Quisque tempus in lorem ac suscipit.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "text-wrap",
    },
  },
  "Visual Tree": {
    "Comment": "text-wrap",
    "Offset": "0, 0, 0",
    "Size": "834, 169",
    "Visual Type": "SpriteVisual",
  },
}
`;
